correct letters alignment in words

--- a/src/components/Word.css
+++ b/src/components/Word.css
@@ -1,6 +1,7 @@
 .word {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .word .letter {
